# pshash

./: .gitignore  .stan.toml  CHANGELOG.md  LICENSE  README.md  cabal.project.local  default.nix  flake.nix  pshash.cabal  pshash.hs
app/: Actions.hs  Keys.hs  Main.hs  Main.js  Parsing.hs  Test.hs  main  main-lazy  main-strict  pshash.conf
calc/: MainCalc.hs  UI.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
documentation/: main.tex  main.typ  paper.tex
documentation/.aux/: main.aux  main.fdb_latexmk  main.fls  main.toc  paper.aux  paper.fdb_latexmk  paper.fls  paper.out
documentation/figures/: hash.asy  logo.asy
documentation/paper/: main.bib  main.tex
gui/: FFI.hs  FFI_stub.h  Main.hs  MainCalc.hs  Makefile  Mod.hs  UI.hs  algorithm.c  algorithm.h  build.sh  compile  compile_commands.json  console.cpp  electron.js  ffitest.cpp  inputs.cpp  inputs.h  lib.cpp  lib.h  main.cpp  main.js  mini-gmp.c  simple.cpp  test  test.sh  wxtest
gui/.cache/clangd/index/: algorithm.h.30451BAADA90ADC3.idx  main.cpp.8E424FA83D6E8809.idx  mini-gmp.h.006D8C504D4A9BDA.idx
help/: index.html
lib/: Algorithm.hi  Algorithm.hs  Encryption.hs  Error.hi  Error.hs  FFI.hs  Info.hi  Info.hs  Inverse.hi  Inverse.hs  Keys.hs  wordlist-adj.txt  wordlist-nouns.txt  wordlist-verbs.txt  words.txt
paper/: links.txt  main.bib  main.tex
paper/.aux/: main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out
paper/figures/: hash.asy
test/: data.enc  data.txt  errors.sh  incorrect.conf  incorrect2.conf  output.sh  pshash.conf
web-app/: export.js  index.html  index.php  pshash.js  run.js
web/app/: Main.js  index.html
web/get/: index.html
web/help/: index.html
website/: index.html
