cabal-version:      3.0
name:               pshash
version:            0.1.15.1
synopsis:           Password generator using hashing functions
license:            MIT
license-file:       LICENSE
author:             Roman Maksimovich
maintainer:         r.a.maksimovich@gmail.com
category:           Math
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library pshash-lib
    import:           warnings
    exposed-modules:  Algorithm, Inverse, Error, Info
    hs-source-dirs:   lib
    default-language: Haskell2010
    build-depends:
        base,

executable pshash
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base,
        containers,
        directory,
        pshash-lib,
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:
        -O2
        -fwrite-ide-info
        -hiedir=.hie
