cabal-version:      3.0
name:               pshash
version:            0.1.17.5
synopsis:           Password generator using hashing functions
license:            MIT
license-file:       LICENSE
author:             Roman Maksimovich
maintainer:         r.a.maksimovich@gmail.com
category:           Math
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options:
        -Wall

library pshash-lib
    import:           warnings
    exposed-modules:  Algorithm, Inverse, Error, Info, Encryption, Keys
    hs-source-dirs:   lib
    default-language: Haskell2010
    build-depends:
        base,
        containers,
        bytestring,

executable pshash
    import:           warnings
    main-is:          Main.hs
    other-modules:    Actions, Parsing
    build-depends:
        base,
        containers,
        directory,
        pshash-lib,
        bytestring,
        random >= 1.3.1
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:
        -O2
        -fwrite-ide-info
        -hiedir=.hie
        -- -rtsopts=all
        -- -with-rtsopts=--io-manager=native
